--- a/aframework/aframework-data/pom.xml
+++ b/aframework/aframework-data/pom.xml
@@ -30,6 +30,10 @@
 
         <!--other-->
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
         </dependency>
