update unit test

--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -257,6 +257,7 @@
             </dependency>
             <!-- tools end -->
         </dependencies>
+
     </dependencyManagement>
 
     <dependencies>
@@ -268,6 +269,29 @@
             <scope>test</scope>
         </dependency>
         <!-- unit end -->
+
+
+        <!-- log begin -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+        <!-- common-logging 实际调用slf4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+        <!-- java.util.logging 实际调用slf4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+        </dependency>
+        <!-- log end -->
+
     </dependencies>
 
     <build>
