--- a/aframework/aframework-service/src/test/resources/database.properties
+++ b/aframework/aframework-service/src/test/resources/database.properties
@@ -1,16 +1,16 @@
 # AFData
 #master-slave
-jdbc.master.afdata.url=jdbc:mysql://172.16.2.85:3306/AFData?useUnicode=true&characterEncoding=utf-8
+jdbc.master.afdata.url=jdbc:mysql://172.16.2.85:3306/afdata?useUnicode=true&characterEncoding=utf-8
 jdbc.master.afdata.username=root
 jdbc.master.afdata.password=123456
 
 # AFOrder
 # master-salve
-jdbc.master.aforder.url=jdbc:mysql://172.16.2.85:3306/AFOrder?useUnicode=true&characterEncoding=utf-8
+jdbc.master.aforder.url=jdbc:mysql://172.16.2.85:3306/aforder?useUnicode=true&characterEncoding=utf-8
 jdbc.master.aforder.username=root
 jdbc.master.aforder.password=123456
 
 #redis db
-redis.hostName=172.16.2.86
+redis.hostName=192.168.199.69
 redis.port=6379
 redis.password=123456
