--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ docs/*
 
 
 # plugs ignore
-/Plugs/mybatis-generator/lib/com
-/Plugs/apache-jmeter-3.2/backups
-/Plugs/apache-jmeter-3.2/bin/jmeter.log
+/plugs/mybatis-generator/lib/com
+/plugs/apache-jmeter-3.2/backups
+/plugs/apache-jmeter-3.2/bin/jmeter.log
 
