--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -71,10 +71,12 @@
         <module>aframework-domain</module>
         <module>aframework-data</module>
         <module>aframework-service</module>
+        <module>aframework-configure</module>
         <module>aframework-api</module>
         <module>aframework-web</module>
         <module>aframework-admin</module>
         <module>all</module>
+
     </modules>
 
     <dependencyManagement>
