--- a/aframework/aframework-admin/pom.xml
+++ b/aframework/aframework-admin/pom.xml
@@ -35,6 +35,18 @@
             <version>${project.parent.version}</version>
         </dependency>
 
+        <!--other-->
+        <!--spring unit begin -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.restdocs</groupId>
+            <artifactId>spring-restdocs-mockmvc</artifactId>
+        </dependency>
+        <!-- spring unit end -->
+
     </dependencies>
 
     <build>
