--- a/aframework/aframework-web/pom.xml
+++ b/aframework/aframework-web/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.aframework.web</groupId>
     <artifactId>aframework-web</artifactId>
     <packaging>war</packaging>
-    <name>aframework-web Maven Webapp</name>
+    <name>aframework-admin Maven Webapp</name>
     <dependencies>
 
         <!--aframework-->
@@ -54,7 +54,7 @@
 
 
     <build>
-        <finalName>aframework-web</finalName>
+        <finalName>aframework-admin</finalName>
 
     </build>
 
