--- a/aframework/aframework-api/pom.xml
+++ b/aframework/aframework-api/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0.0</version>
     </parent>
 
-
+    <version>1.0.1</version>
     <groupId>org.aframework.api</groupId>
     <artifactId>aframework-api</artifactId>
     <name>Archetype - aframework-api</name>
@@ -20,22 +20,22 @@
         <dependency>
             <groupId>org.aframework.domain</groupId>
             <artifactId>aframework-domain</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${aframework-domain.version}</version>
         </dependency>
         <dependency>
             <groupId>org.aframework.service</groupId>
             <artifactId>aframework-service</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${aframework-service.version}</version>
         </dependency>
         <dependency>
             <groupId>org.aframework.core</groupId>
             <artifactId>aframework-core</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${aframework-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.aframework.configure</groupId>
             <artifactId>aframework-configure</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${aframework-configure.version}</version>
         </dependency>
 
         <!--spring unit begin -->
