--- a/aframework/aframework-data/pom.xml
+++ b/aframework/aframework-data/pom.xml
@@ -8,7 +8,7 @@
         <artifactId>aframework</artifactId>
         <version>1.0.0</version>
     </parent>
-
+    <version>1.0.0</version>
     <groupId>org.aframework.data</groupId>
     <artifactId>aframework-data</artifactId>
     <name>Archetype - aframework-data</name>
@@ -20,12 +20,12 @@
         <dependency>
             <groupId>org.aframework.core</groupId>
             <artifactId>aframework-core</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${aframework-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.aframework.domain</groupId>
             <artifactId>aframework-domain</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${aframework-domain.version}</version>
         </dependency>
 
         <!--other-->
