--- a/aframework/aframework-service/pom.xml
+++ b/aframework/aframework-service/pom.xml
@@ -8,6 +8,7 @@
         <artifactId>aframework</artifactId>
         <version>1.0.0</version>
     </parent>
+    <version>1.0.0</version>
     <groupId>org.aframework.service</groupId>
     <artifactId>aframework-service</artifactId>
     <name>Archetype - aframework-service</name>
@@ -19,17 +20,17 @@
         <dependency>
             <groupId>org.aframework.core</groupId>
             <artifactId>aframework-core</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${aframework-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.aframework.domain</groupId>
             <artifactId>aframework-domain</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${aframework-domain.version}</version>
         </dependency>
         <dependency>
             <groupId>org.aframework.data</groupId>
             <artifactId>aframework-data</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${aframework-data.version}</version>
         </dependency>
 
         <!--other-->
