--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -30,6 +30,16 @@
         <slf4j.version>1.7.7</slf4j.version>
         <shiro.version>1.3.2</shiro.version>
 
+        <!-- aframework -->
+        <aframework-core.version>1.0.0</aframework-core.version>
+        <aframework-domain.version>1.0.0</aframework-domain.version>
+        <aframework-data.version>1.0.0</aframework-data.version>
+        <aframework-service.version>1.0.0</aframework-service.version>
+        <aframework-configure.version>1.0.0</aframework-configure.version>
+        <aframework-web.version>1.0.1</aframework-web.version>
+        <aframework-admin.version>1.0.1</aframework-admin.version>
+        <aframework-api.version>1.0.1</aframework-api.version>
+
         <!-- tools -->
         <commons-io.version>2.5</commons-io.version>
         <commons-lang3.version>3.6</commons-lang3.version>
