1.maven spring version common 2.add dubbo

--- a/aframework/aframework-domain/pom.xml
+++ b/aframework/aframework-domain/pom.xml
@@ -14,4 +14,15 @@
     <name>Archetype - aframework-domain</name>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <!-- dubbo -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.sgroschupf</groupId>
+            <artifactId>zkclient</artifactId>
+        </dependency>
+    </dependencies>
 </project>
